Object Viewport Display Color Reverts To Default After Using Color Picker #60554

Closed
opened 2019-01-16 07:32:08 +01:00 by Andy Sellers · 9 comments

System Information
Operating system: Windows 10
Graphics card: GTX 950M

Blender Version
Broken:
Blender 2.80
Branch: Master
Commit date: 2019-01-14
Hash: 84c06e996a

Short description of error

Object viewport display color will revert back to the default white after using the color picker, and immediately adding a second object with a non-default property. (E.g. changing the initial origin, rings/segments of a UV Sphere.)

Exact steps for others to reproduce the error
Select the default cube.
Go to the Material tab in the Properties Editor.
Under the Viewport Display menu, use the color-picker to change the color to anything other than default.
Add any object (e.g. a Torus) to the scene.
Change any property in the New-Object pop-up menu in the lower left of the 3D View. (I'm sorry, I don't remember what this menu is called.)
The default cube will revert back to the original white color.

(This error does not occur if any other property is changed between using the color picker, and adding the second object. Nor will it occur of the color picker is not used.)

system-info.txt

**System Information** Operating system: Windows 10 Graphics card: GTX 950M **Blender Version** Broken: Blender 2.80 Branch: Master Commit date: 2019-01-14 Hash: 84c06e996a7a **Short description of error** Object viewport display color will revert back to the default white after using the color picker, and immediately adding a second object with a non-default property. (E.g. changing the initial origin, rings/segments of a UV Sphere.) **Exact steps for others to reproduce the error** Select the default cube. Go to the Material tab in the Properties Editor. Under the Viewport Display menu, use the color-picker to change the color to anything other than default. Add any object (e.g. a Torus) to the scene. Change any property in the New-Object pop-up menu in the lower left of the 3D View. (I'm sorry, I don't remember what this menu is called.) The default cube will revert back to the original white color. (This error does not occur if any other property is changed between using the color picker, and adding the second object. Nor will it occur of the color picker is not used.) [system-info.txt](https://archive.blender.org/developer/F6302885/system-info.txt)
Author

Added subscriber: @Andrewm90

Added subscriber: @Andrewm90

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Good catch. Confirmed. Missing undo push when using the color picker?

Good catch. Confirmed. Missing undo push when using the color picker?
Campbell Barton was assigned by William Reynish 2019-01-16 10:22:27 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Ok to assign to you @ideasman42 ? I know you have worked on the undo system.

Ok to assign to you @ideasman42 ? I know you have worked on the undo system.

This issue was referenced by c8e75c2b00

This issue was referenced by c8e75c2b00cfb7e87bcb800c9acc8f126949749d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Archived'

Changed status from 'Resolved' to: 'Archived'

Note that looking into this exposed other issues, See: a3f312dcd1 3c2126c6f1, #60609.

Note that looking into this exposed other issues, See: a3f312dcd1 3c2126c6f1, #60609.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60554
No description provided.