Fix T60554: Missing undo push changing color

Operators don't have a good way to skip undo,
for now check the button undo flag & return cancelled.